--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 <article>
     <h1>Working on it! &#128521;</h1>
     <div>
-        <p>Performing some maintenance at the moment. If you need to, you can always reach me on <a href="https://twitter.com/talabiope">twitter</a> or <a href="linkedin.com/in/talabi-opemipo/">LinkedIn</a>, otherwise I&rsquo;ll be back online shortly!</p>
+        <p>Performing some maintenance at the moment. If you need to, you can always reach me on <a href="https://twitter.com/talabiope">twitter</a> or
+          <a href="linkedin.com/in/talabi-opemipo/">LinkedIn</a>, otherwise I&rsquo;ll be back online shortly! <small>(you can checkout my<a href="./Doc/OpemipoTalabiResume.pdf"> resume</a> in the mean time)</small></p>
+        <p>Thank you</p>
         <p>&mdash; Talabi</p>
     </div>
 </article>
